a10login: handle logout prompt variation for older ACOS - Wouter de Jong
ACOS 4.1.x :

hostname[1/1]#exit
hostname[1/1]>exit
Are you sure to quit (N/Y)?:

ACOS 2.7.x :

hostname[1/1]#exit
hostname[1/1]>exit
Are you sure you want to quit (N/Y)?:

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	a10login: handle logout prompt variation for older ACOS - Wouter de Jong
+
 	junos.pm: handle show chassis firmware bug for 11.x on EX - Wouter de
 	Jong
 
