--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	ciscowlc.pm: filter mgig temperature - Erik Muller
+
 	anlogin: make the pty allocation the same as in jlogin
 
 	dell.pm: powerconnect N[234]000 do not reliably echo the <CR> after
