--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	sros.pm: ignore Error: Bad command. error msg form older sros devices
+
 	ciscowlc.pm: filter mgig temperature - Erik Muller
 
 	anlogin: make the pty allocation the same as in jlogin
