--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,6 @@
 3.99.99
+	xilogin: handle pager disable for arcos
+
 	junos.pm: add ShowSystemConfDB()
 
 	sros.pm: ignore Error: Bad command. error msg form older sros devices
