add arrcus info

--- a/man/clogin.1
+++ b/man/clogin.1
@@ -1,6 +1,6 @@
-.\"
+\"
 .hys 50
-.TH "clogin" "1" "7 September 2018"
+.TH "clogin" "1" "22 January 2019"
 .SH NAME
 clogin \- Cisco login script
 .SH SYNOPSIS
@@ -74,7 +74,7 @@ Riverstone,
 Netopia,
 Cisco WLCs,
 Extreme devices
-and Xirrus arrays,
+and Xirrus arrays or Arrcus routers,
 named
 .B a10login
 .B alogin,
