--- a/rancid/FAQ
+++ b/rancid/FAQ
@@ -236,8 +236,8 @@ A. Assuming that you're starting fresh, its quite simple.  Before running
 
 
 Q. I need a web interface to the rancid CVS repository, for the CVS unsavvy.
-A. cvsweb works with rancid.  Other similar software may exist as well and
-   there are similar tools for Subversion and git.
+A. cvsweb works with rancid.  Other software may exist for CVS and there are
+   similar tools for Subversion and git.
 	http://www.freebsd.org/projects/cvsweb.html
    cvsweb.conf:
 	@CVSrepositories = (
