--- a/rancid/man/clogin.1
+++ b/rancid/man/clogin.1
@@ -1,4 +1,4 @@
-\"
+.\"
 .hys 50
 .TH "clogin" "1" "22 January 2019"
 .SH NAME
@@ -61,6 +61,7 @@ Avocent (Cyclades),
 Bay Networks (nortel),
 Cisco Small Business devices,
 ADC-kentrox EZ-T3 mux,
+Fortinet firewalls,
 Foundry,
 HP Procurve switches and Cisco AGMs,
 Hitachi routers,
@@ -76,7 +77,7 @@ Cisco WLCs,
 Extreme devices
 and Xirrus arrays or Arrcus routers,
 named
-.B a10login
+.B a10login,
 .B alogin,
 .B avologin,
 .B blogin,
