--- a/rancid/man/rancid_intro.1
+++ b/rancid/man/rancid_intro.1
@@ -24,7 +24,7 @@ Hitachi,
 Juniper Routers and edge (ERX) routers,
 MRTd daemon,
 Microtik routers,
-Netscalar load balancers,
+Netscaler load balancers,
 Netscreen firewalls,
 Procket,
 Redback,
