--- a/rancid/man/router.db.5
+++ b/rancid/man/router.db.5
@@ -59,7 +59,7 @@ can be merged with the IOS rancid module.
 An Alteon WebOS switches.
 .TP
 .ID 15n
-.B arcosa
+.B arcos
 An Arrcus router.
 .TP
 .ID 15n
@@ -159,6 +159,10 @@ A Force10 router.
 A Fortinet firewall.
 .TP
 .ID 15n
+.B fortigate-full
+A Fortinet firewall with all defaults shown.
+.TP
+.ID 15n
 .B foundry
 A Foundry router, switch, or router-switch.  This includes HP
 Procurve switches that are OEMs of Foundry products, such as the
@@ -191,8 +195,8 @@ A MRV optical device; including NC316, OptiSwitch 904, OptiSwitch 906G,
 OptiSwitch 912C, OptiSwitch 940.
 .TP
 .ID 15n
-.B netscalar
-A Netscalar load balancer.
+.B netscaler
+A Netscaler load balancer.
 .TP
 .ID 15n
 .B netscreen
