--- a/rancid/man/rancid.1
+++ b/rancid/man/rancid.1
@@ -75,15 +75,12 @@ Force10
 .B f5rancid
 F5 BigIPs
 .TP
-.B fnrancid
-Fortinet Firewalls
-.TP
 .B rancid
 The generic rancid script; supporting Allied Telesis AW+ devices,
 Arbor Networks Appliances, Ciena Waverserver, Cisco IOS, Cisco IOS-XR,
 Cisco NX-OS, Cisco WLC, (some) Dell switches, Extreme switches,
-Foundry (aka some Brocade) devices, Juniper JUNOS, Nokia (Alcatel-Lucent)
-SR OS, and UBNT Edgemax and EdgeRouter.
+Fortinet firewalls, Foundry (aka some Brocade) devices, Juniper JUNOS,
+Nokia (Alcatel-Lucent) SR OS, and UBNT Edgemax and EdgeRouter.
 It uses the device O/S modules for parsing routines as determined by the
 .BR rancid.types.conf (5)
 file(s).
