--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,7 @@
 3.9.99
+	rancid: escape "s in rancid.types command definitions - Charles R
+	Anderson
+
 	ios.pm: filter some log files on ASA 9.8 / FTD2100s - Erik Muller
 
 	various documentation updates/corrections - Nick Nauwelaerts
