--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,7 @@
 3.9.99
+	panos.pm: filter SNMP community strings & correct comment character -
+	Charles R Anderson
+
 	rancid: escape "s in rancid.types command definitions - Charles R
 	Anderson
 
