--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,7 @@
 3.9.99
+	wavesvros.pm: filter alternate form of user password - Charles R
+	Anderson
+
 	panos.pm: filter SNMP community strings & protocol encryption keys &
 	correct comment character - Charles R Anderson
 
