--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,7 @@
 3.9.99
+	arcos.pm rancid.types.base: change show hardware handling to eliminate
+	fluctuation in formatting and output
+
 	junos.pm: filter SRX cluster RE/LC names in prompts - Charles R Anderson
 
 	junos.pm: filter negative chassis temps - Charles R Anderson
