--- a/rancid/FAQ
+++ b/rancid/FAQ
@@ -287,12 +287,13 @@ A. Our usual diagnostic procedure for this is:
 
      Should produce a cisco_router.new file (cooked to a golden rancid-style
      colour) in the current directory.  If it does not, try again with the
-     -d option, so that the cisco_router.new file will not be removed if
-     an error is detected.  The -l option is also useful for logging.  Note:
-     if you have NOPIPE set in your environment, a cisco_router.raw file will
-     be produced that is the raw output of the dialogue with the device, and
-     with the -d option, the .raw file will not be deleted at the end.  That
-     is helpful to see all the output.
+     -d option, so that the cisco_router.new and cisco_router.raw files will
+     not be removed if an error is detected.  The cisco_router.raw file is
+     the raw output of the dialogue with the device, and with the -d option,
+     the .raw file will not be deleted at the end, which is helpful to see all
+     the input.  The -l option is also useful for logging.  Note: in versions
+     prior to 3.10, NOPIPE=YES must be set in your environment to produce the
+     cisco_router.raw file.
 
    If all of these work, make sure that the device's entry in the group's
    router.db file is correct and check the group's last log file for errors.
@@ -612,7 +613,7 @@ A. You should first search the rancid-discuss mail list and the web for
 
    After the login script works, work on the rancid library.  First the inloop
    function, followed by the filter functions.  See tips regarding rancid -d
-   and the environment variable NOPIPE earlier in this FAQ.
+   and .raw files earlier in this FAQ.
 
 
 Q. I wish to extend an existing rancid device type with an additional command
