--- a/rancid/CHANGES
+++ b/rancid/CHANGES
@@ -1,4 +1,7 @@
 3.9.99
+	hrancid: filter rogue diagnostic output from 3rd-party transceivers in
+	Aruba - Huber Florian Tobias
+
 	remove manpages, etc of rancid scripts converted to modules - Roland
 	Rosenfel
 
