--- a/man/rancid.1
+++ b/man/rancid.1
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "rancid" "1" "15 April 2019"
+.TH "rancid" "1" "3 June 2019"
 .SH NAME
 rancid \- Cisco configuration filter
 .SH SYNOPSIS
@@ -98,7 +98,7 @@ Juniper Networks E-series
 MRTd
 .TP
 .B mtrancid
-Mikrotik routesrs
+Mikrotik routers
 .TP
 .B nrancid
 Netscreen firewalls
