--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Rancid is a "Really Awesome New Cisco confIg Differ" developed to
+RANCiD is a "Really Awesome New Cisco confIg Differ" developed to
 maintain CVS (or Subversion or git) controlled copies of router configs.
 
 *** The Following Information is Very Important ****
