fix a typo in -S description.

--- a/man/clogin.1
+++ b/man/clogin.1
@@ -1,6 +1,6 @@
 .\"
 .hys 50
-.TH "clogin" "1" "22 January 2019"
+.TH "clogin" "1" "5 June 2019"
 .SH NAME
 clogin \- Cisco login script
 .SH SYNOPSIS
@@ -124,7 +124,7 @@ The command-line options are as follows:
 .TP
 .B \-S
 Save the configuration on exit, if the device prompts at logout time.
-This only has affect when used with -s.
+This only has affect when used with -c.
 .TP
 .B \-V
 Prints package name and version strings.
