mention arista eos
arrancid seems to have gotten changed to a device module. arrancid was removed from this manpage, but arista eos wasn't added to the generic rancid list it seems.

(noticed while migrating aerohive/hiveos support in my forked repo)

--- a/man/rancid.1
+++ b/man/rancid.1
@@ -74,10 +74,11 @@ F5 BigIPs
 .TP
 .B rancid
 The generic rancid script; supporting Allied Telesis AW+ devices,
-Arbor Networks Appliances, Ciena Waverserver, Cisco IOS, Cisco IOS-XR,
-Cisco NX-OS, Cisco WLC, (some) Dell switches, Extreme switches,
-Fortinet firewalls, Foundry (aka some Brocade) devices, Juniper JUNOS,
-Nokia (Alcatel-Lucent) SR OS, and UBNT Edgemax and EdgeRouter.
+Arbor Networks Appliances, Arista EOS, Ciena Waverserver, Cisco IOS,
+Cisco IOS-XR, Cisco NX-OS, Cisco WLC, (some) Dell switches,
+Extreme switches, Fortinet firewalls, Foundry (aka some Brocade)
+devices, Juniper JUNOS, Nokia (Alcatel-Lucent) SR OS, and UBNT
+Edgemax and EdgeRouter.
 It uses the device O/S modules for parsing routines as determined by the
 .BR rancid.types.conf (5)
 file(s).
