--- a/man/clogin.1
+++ b/man/clogin.1
@@ -52,8 +52,8 @@ router
 is an
 .BR expect (1)
 script to automate the process of logging into a Cisco router,
-Catalyst switch, Extreme switch, Juniper ERX/E-series, Procket Networks,
-or Redback router.
+Catalyst switch, Arista switch, Extreme switch, Juniper ERX/E-series,
+Procket Networks or Redback router.
 There are complementary scripts for
 A10,
 Alteon,
