--- a/man/clogin.1
+++ b/man/clogin.1
@@ -56,6 +56,7 @@ Catalyst switch, Extreme switch, Juniper ERX/E-series, Procket Networks,
 or Redback router.
 There are complementary scripts for
 A10,
+Aerohive,
 Alteon,
 Avocent (Cyclades),
 Bay Networks (nortel),
@@ -78,6 +79,7 @@ Extreme devices
 and Xirrus arrays or Arrcus routers,
 named
 .B a10login,
+.B ahlogin,
 .B alogin,
 .B avologin,
 .B blogin,
