--- a/man/router.db.5
+++ b/man/router.db.5
@@ -173,6 +173,10 @@ HP9304M.
 A Hitachi router.
 .TP
 .ID 15n
+.B hiveos
+An Aerohive access point running HiveOS.
+.TP
+.ID 15n
 .B hp
 A HP Procurve switch such as the 2524, 4108 or J9086A (aka. 2610) procurve
 switches, J9091A, and J8698A.
