--- a/man/clogin.1
+++ b/man/clogin.1
@@ -51,12 +51,11 @@ router
 .B clogin
 is an
 .BR expect (1)
-script to automate the process of logging into a Cisco router,
-Catalyst switch, Extreme switch, Juniper ERX/E-series, Procket Networks,
-or Redback router.
+script to automate the process of logging into an Aerohive access
+point Cisco router, Catalyst switch, Extreme switch, Juniper
+ERX/E-series, Procket Networks, or Redback router.
 There are complementary scripts for
 A10,
-Aerohive,
 Alteon,
 Avocent (Cyclades),
 Bay Networks (nortel),
@@ -79,7 +78,6 @@ Extreme devices
 and Xirrus arrays or Arrcus routers,
 named
 .B a10login,
-.B ahlogin,
 .B alogin,
 .B avologin,
 .B blogin,
