--- a/man/clogin.1
+++ b/man/clogin.1
@@ -52,7 +52,7 @@ router
 is an
 .BR expect (1)
 script to automate the process of logging into an Aerohive access
-point Cisco router, Catalyst switch, Extreme switch, Juniper
+points, Cisco router, Catalyst switch, Extreme switch, Juniper
 ERX/E-series, Procket Networks, or Redback router.
 There are complementary scripts for
 A10,
