--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.9.99
+	Missing Arista documentation - github.com/inphobia
+
 	GC "procket" from manpages & README
 
 	arcos.pm: drop trailing spaces
