--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.9.99
+	fss2.pm: drop cpu stats and process stats from FSS >=2.5.1
+
 	iosxr.pm: DirSlotN(): drop the file number from all files.
 
 	Missing Arista documentation - github.com/inphobia
