file missed in 875a5d28ba224c9ebf37202f6d731d1bd2d39217.

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 3.9.99
+	f10rancid: drop version/last config/startup-config comments from config
+	- Florin Vlad Olariu
+
 	fss2.pm: drop cpu stats and process stats from FSS >=2.5.1
 
 	iosxr.pm: DirSlotN(): drop the file number from all files.
