--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.9.99
+	rancid-run: wrong variable used in OLDTIME comparison - Adrian Hardy
+
 	f10rancid: drop version/last config/startup-config comments from config
 	- Florin Vlad Olariu
 
