--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 3.9.99
+	hlogin: add variable of user prompt from Dell PowerConnect M8024-k as
+	type 'smc'.
+
 	iosxr.pm: match diskN, where N may be >1 in XR 6.x on 9k with a usbdrive
 
 	arcos.pm: fail on cli to application error
