--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.9.99
+	smc.pm: replaces srancid; modularization.
+
 	ios.pm: collect show dot1x; if dot1x auth is enabled and
 	rancid.conf:FILTER_OSC = ALL, filter show vlan, which otherwise change
 	frequently
