--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+3.10.99
+	sros.pm: improve power data filters
+
 3.10
 	rancid.types.base: cisco eXR does not have admin show install summary;
 	use admin show install active instead, which appears to be the same at
