--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 3.10.99
-	dnos9|force10: ShowVersion(): drop trailing WS - Howard Jones
+	ios.pm: ShowFlash(): filter ASA fluctuating files in LOCAL-CA-SERVER/ -
+	Emille Blanc
+
+	dnos9.pm|force10: ShowVersion(): drop trailing WS - Howard Jones
 
 	blogin: normalize part of login() to clogin
 
