--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.10.99
+	iosxr.pm: match old files where the 4-digit year replaces the timestamp
+
 	add device type junos-evo for JunOS EVO
 
 	panos.pm: ShowConfig(): missing last line of config - ermuller
