junos.pm: EVO RE DRAM fluctuates; replace with "installed" value     - #     DRAM                      13635 MB (15499 MB installed)     + #     DRAM                      13652 MB (15499 MB installed)

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.10.99
+	junos.pm: EVO RE DRAM fluctuates; replace with "installed" value
+
 	dnos10: add command show inventory
 
 	iosxr.pm: match old files where the 4-digit year replaces the timestamp
