junos.pm: ShowChassisClocks() must recognize some backend daemon communication errors.  Specifically these:
error: abnormal communication termination with chassis-control daemon

error: invalid xml tag () from chassis-control daemon

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 3.10.99
+	junos.pm: ShowChassisClocks() must recognize some backend daemon
+	communication errors
+
 	junos.pm: EVO RE DRAM fluctuates; replace with "installed" value
 
 	dnos10: add command show inventory
