--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.10.99
+	edgemax.pm: filter fan spped/duty from o/s 1.9
+
 	foundry.pm: wrap secure MAC address if FILTER_OSC > YES
 
 	junos.pm: ShowChassisClocks() must recognize some backend daemon
