--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 3.10.99
+	iosxr.pm: ShowInstallSummary(): add "Image:" prefix for consistency
+	with ShowInstallActive()
+
 	rancid-fe: recognize rancid.types.conf aliases
 
 	junos.pm: show chassis clocks is broken in 19.1R2.1-EVO on some
